2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (window_open_new_tab): Add commented out code
	snippet to make it easier to tweak the CSS.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-assistant-view.c (assistant_button_press_event): Don't
	block button 1 events. Fixes selecting text in the assistant.

	* configure.ac: Bump version to 0.22.

2008-11-06  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_activate_close),
	(window_activate_about), (window_populate), (window_open_new_tab):
	Don't show notebook tabs if there is only one tab to save some
	space and get a cleaner look. Paddings/shadow might need some
	further tweaking.

2008-11-03  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-window.c: Revert the padding changes.
	- Fix title updating when switching tabs.
	- Remove the close button on mac, it looks really strange.

2008-11-03  Richard Hult  <richard@imendio.com>

	* src/dh-main.c: Reindent.

2008-10-30  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-window.c: Tweak paddings to try and make things look a
	bit better, might revert later.

2008-10-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Minor cleanups.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/dh-search.c (dh_search_new): Remove the extra frame and set
	the shadow on the scrolled windows instead, looks more consistent.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Clean up a bit, make the html view/content tab
	syncing work again, don't make the notebook tabs expand, remove
	unused code.

2008-10-28  Richard Hult  <richard@imendio.com>

	Bug 557795 – Add assistant/search plugin for VIM

	* misc/devhelp.vim: Add new, much improved version from Jannis
	Pohlmann.

2008-10-23  Carlos Garnacho  <carlos@imendio.com>

	* misc/devhelp.el: Add provide for devhelp.el.

2008-10-22  Richard Hult  <richard@imendio.com>

	Bug 557223 – segmentation fault on startup
