@@ -1,5 +1,10 @@
 2008-11-28  Richard Hult  <richard@imendio.com>
 
+	* src/dh-preferences.c: Remove the code that previously was used
+	to update the font settings in the HTML widget (now unused).
+
+2008-11-28  Richard Hult  <richard@imendio.com>
+
 	* src/dh-window.c (window_open_new_tab): Add commented out code
 	snippet to make it easier to tweak the CSS.
 
